Closed Bug 472501 Opened 16 years ago Closed 16 years ago

[FIX]More XUL frame construction weirdness

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

There are two more places in ConstructXULFrame where we should be checking the namespace.  Also, there's weirdness where only XUL frames check with the binding manager whether to process kids.  I think all frames should do that.  I checked on try server, and performance impact is nonexistent (probably because of the bit-check which fast-paths the whole thing for HTML in the typical case).
Attached patch Proposed fixSplinter Review
Attachment #355770 - Flags: superreview?(roc)
Attachment #355770 - Flags: review?(enndeakin)
Comment on attachment 355770 [details] [diff] [review]
Proposed fix

OK, but there's another tooltip reference a bit earlier up in the NS_STYLE_DISPLAY_POPUP check as well.
Attachment #355770 - Flags: review?(enndeakin) → review+
Oh, right.  That one's removed by a different patch in my queue, actually (moves it out of frame constructor entirely, in fact).  With any luck I'll be attaching a whole bunch of stuff like that to a still-to-be-filed bug sometime after the freeze.
Attachment #355770 - Flags: superreview?(roc) → superreview+
Pushed http://hg.mozilla.org/mozilla-central/rev/38889a06fb52
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 502567
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: