Bug 472501.  Add XUL namespace checks in some more places where they're needed, and make the XBL suppression of child frame processing work for all frames, not just XUL.  r=enndeakin, sr=roc